@@ -1,0 +1,8 @@
+<?xml version='1.0' encoding='UTF-8' ?>
+
+<addon id='Submit'>
+	<model>
+        <property name="Text" type="string" isLocalized="true" />
+        <property name="TextSelected" displayName="Text Selected" type="string" isLocalized="true" />
+	</model>
+</addon>
