@@ -1,0 +1,12 @@
+.submit-wrapper,
+.submit-wrapper .submit-container,
+.submit-wrapper .submit-container .submit-button {
+    width: 100%;
+    height: 100%;
+}
+
+.submit-wrapper .submit-container .submit-button {
+    background: url('resources/submit-button.png') no-repeat center;
+    cursor: pointer;
+    text-align: center;
+}
