@@ -47,6 +47,7 @@ Single_State_Button
 Slider
 Slideshow
 Standard_Shapes
+Submit
 SVG2
 Table
 Table_Of_Contents
